Fix bugs on small-phone screen.

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -282,6 +282,6 @@
   }
 
   @include respond(small-phone) {
-    max-width: 40rem;
+    width: 80%;
   }
 }
