--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -4,7 +4,7 @@
   margin-top: -20vh;
 
   @include respond(phone) {
-    padding: 30rem 3rem 25rem 3rem;
+    padding: 26rem 3rem 20rem 3rem;
   }
 }
 
